[package]
name = "flatmap"
version = "0.1.0"
authors = ["Roman Shishkin <spark@uwtech.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
log = "0.4.14"
png = "0.16.8"
simplelog = "0.9.0"
regex = "1"
threadpool = "1.8.1"
# zip = "0.5.11"
hematite-nbt = "0.5.1"
thiserror = "1.0.24"
